# pcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  MEUS_PROMPTS.md  PROMPTS_INICIAIS.md  README.md  docker-compose.prod.yml  docker-compose.yml  rust-toolchain.toml
.claude/: settings.json
.sqlx/: query-01adf96e12d4de98b286b029534ac958c8a098ad98f2ab704eaab6abe76db870.json  query-0240e133ce6667252ad3cfd9ad1e1d91c04555dd05c8b39cd2cd05562fea9769.json  query-0379a96050f5c74ee2dba8db0246ff863d481ad672e33a5d26c5515b517ba95d.json  query-040b77669931cab0e9326d7ce0951c9c74bd0c8e0970d99ec224cd791b87f2d6.json  query-047bc355c8bdc6db615c8f3e23eb5ff9a359620b2d026a114504e72723878db5.json  query-05acd7e15c163ecc4174aac63550517898671cea6f143553d7d4f3b505f080c3.json  query-05eda8dde3f13753509c97a2b961d771efd9ecf085bbf45208b8c3a16a33ab1d.json  query-0792e67e2f6038ae6868b24fae62b5e423c8899e212c2f04c411301b3665bb0a.json  query-099422b2f1baeb685749bbe01dd08cf36ca84f6aa45439c8a0ff9e6cd8c9cc5d.json  query-0c5fa2708aa1c0ab6d86c5cef79e156186daba29f20c61bc5f10a637c5650b76.json  query-0e07fb58fe555055c9be477bc640d5f0e9c570413cd116d18d2fd2eb2510c2db.json  query-0eb52bd8743a4bc8a4ca437783f2fb4e602c94eb8249c6e87046a3f74f737b7c.json  query-0fe5e877bf83296507d1f091ca287435d2a07ad3a738a98c5dced0b1b03e6dbd.json  query-10d0cdc3db271bbba70ad56a8e99d84f01e0d9a7d80b47c47c83a963cb40a598.json  query-181a8d1a5f595fca0e2b719290ba3f998d3ea94c336cdf34d83aa31d25804e34.json  query-181ca3ee2ae052e48fba1d5f1dbb180854d90a636929bf88b45dab37296277fb.json  query-19b696428ae61b191717f716af31b272dc2a8b5e53c1ebf1ab6d5e6e7005da02.json  query-1b42f4d3b4cb6912cdf59b939151d5873808f7a401d63d80fa91fa63e74f7e5d.json  query-1e03e4e10654f2508d538d23a7359610d4f55c40c10e03010b4a9f276cc70026.json  query-22ea0f4ca88e54aedefb3d91eb4f2412fc9aa042c11193ab2b41021eaafaf788.json  query-263777aeebac78fd693e75811c2337974e1a5e6753a83bf07aca97efa3718d94.json  query-26db7ad47809de7604f043d3ec1835b162f8ff94022c379f0be1dd0c19f26ffd.json  query-2b1c87b3eb812f4ed89b412cf5bdc857e19610192ee1d9307f8ee7f5e196ed88.json  query-2f28987ff28bcafd31b6055cdadb0b850ea46701dc6134e1be8758c16b286967.json  query-2fbd78829b4e2225a5d647e6ac3e6e1d0039631ecfe5e2c86ed8ca76e5dff676.json  query-3143fc4d1136b4dff60ef674f7924f199ff00602fdad6451f4316242453b2ee1.json  query-3353b44117c33bc738a0fc511085c3f2287c0f37c5321bf385be8efaf1c8ce5d.json  query-38219fcf8337621246e0753331b181656af5d77bfc7011dcf9c2aa51095451c7.json  query-38b8f432d010d5ea7e2383211b99b8fab318751682a2a51d3027954f16cd49df.json  query-3ac7c0aa2ba15b1ac8e47d9847c3618d7b26088c183d9f1595b796e4dfdbda34.json  query-3c247722a3382230cc3632348f5a4cb4550825923682919e7de6cfd9d1f2d0d8.json  query-3fde43a0790d7931916820fe5582c69d21be6a16bd14d10232469b9ff1958b41.json  query-464b93ce76b9c99eccd83e333bfa39c069d8a9e879e307f84bab0c6f95798961.json  query-46767cbe9c642d720459966f7ec80c0392f2889335036beb93d003f3994a9d36.json  (+82 more)
crates/pcp-ai/: Cargo.toml
crates/pcp-ai/src/: lib.rs
crates/pcp-api/: Cargo.toml
crates/pcp-api/src/: bootstrap.rs  config.rs  erro.rs  estado.rs  filtros_salvos.rs  lib.rs  main.rs  preferencias.rs  recomendacao.rs  rotas.rs  sazonalidade.rs  solicitacoes.rs  usuarios.rs
crates/pcp-api/src/leitura/: atividade.rs  dashboard.rs  dashboard_classes.rs  estoque.rs  estoque_exportacao.rs  insights.rs  mod.rs  operacao.rs  produto.rs
crates/pcp-api/tests/: autorizacao.rs  leitura.rs
crates/pcp-config/: Cargo.toml
crates/pcp-config/src/: carregar.rs  lib.rs  modelo.rs  validacao.rs
crates/pcp-config/tests/: config.rs
crates/pcp-core/: Cargo.toml
crates/pcp-core/src/: lib.rs  recomendacao.rs  sazonalidade.rs  status.rs  tipos.rs
crates/pcp-core/src/ciclo_vida/: estado.rs
crates/pcp-core/src/classificacao/: mod.rs  parametros.rs  pareto.rs  precedencia.rs
crates/pcp-core/src/parametros/: calculo.rs  estatistica.rs  formula.rs  mod.rs
crates/pcp-core/src/solicitacao/: estado.rs  mod.rs
crates/pcp-db/: Cargo.toml
crates/pcp-db/src/: agregacoes.rs  atividade_produto.rs  ciclo_vida.rs  config_persist.rs  derivadas.rs  detalhe.rs  erro.rs  expurgo.rs  filtros_salvos.rs  leituras.rs  lib.rs  migracoes.rs  preferencias.rs  sazonalidade.rs  snapshot.rs  solicitacoes.rs  usuarios.rs  vendas.rs
crates/pcp-db/tests/: repositorios.rs
crates/pcp-engine/: Cargo.toml
crates/pcp-engine/src/: lib.rs  mapeamento.rs  pipeline.rs  sazonalidade.rs
crates/pcp-engine/tests/: pipeline.rs  sazonalidade.rs
crates/pcp-etl/: Cargo.toml
crates/pcp-etl/src/: arquivo.rs  bronze.rs  complementar.rs  erro.rs  fonte.rs  importacao.rs  lib.rs  one.rs
crates/pcp-web/: Cargo.toml
crates/pcp-web/public/icons/: README.md
crates/pcp-web/src/: api.rs  app.rs  armazenamento.rs  contexto.rs  formato.rs  hydratacao.rs  layout.rs  lib.rs  main.rs
crates/pcp-web/src/api/: mod.rs  tipos.rs
crates/pcp-web/src/componentes/: estado_vazio.rs  mod.rs
crates/pcp-web/src/paginas/: abc.rs  alertas.rs  configuracoes.rs  dashboard.rs  estoque.rs  login.rs  mod.rs  operacao.rs  placeholders.rs  producao.rs  produto.rs
crates/pcp-web/src/paginas/login/: marca.rs  mod.rs  vistas.rs
crates/pcp-web/style/: main.scss
modulos/pcp/pcp-ai/: Cargo.toml
modulos/pcp/pcp-ai/src/: estatistica.rs  insights.rs
modulos/pcp/pcp-engine/: Cargo.toml
modulos/pcp/pcp-engine/src/: erro.rs  mapeamento.rs  pipeline.rs  sazonalidade.rs  webhook.rs
modulos/pcp/pcp-engine/tests/: pipeline.rs
modulos/pcp/pcp-etl/: Cargo.toml
modulos/pcp/pcp-etl/src/: arquivo.rs  bronze.rs  complementar.rs  erro.rs  fonte.rs  one.rs
modulos/pcp/tests/: Cargo.toml
modulos/pcp/tests/src/: lib.rs
modulos/pcp/tests/tests/: etl_motor.rs  paridade.rs  smoke.rs
nucleo/sf-auth/: Cargo.toml
nucleo/sf-auth/src/: jwt.rs  lib.rs  middleware.rs  papel.rs  refresh.rs  senha.rs
nucleo/sf-db/: Cargo.toml
nucleo/sf-db/src/: erro.rs  lib.rs  migracoes.rs  pool.rs
nucleo/sf-db/src/identidade/: mod.rs  refresh_tokens.rs  usuarios.rs
nucleo/sf-http/: Cargo.toml
nucleo/sf-http/src/: erro.rs  lib.rs
tests/: Cargo.toml
(+137 files in other folders)
