[package]
name = "pcp-tests"
description = "Testes de paridade e invariantes de regra (regressão) — doc 08 §3–4."
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

# Os testes de paridade (prompt 1.7) passarão a depender de pcp-core/pcp-engine aqui.
[dependencies]
