[package]
name = "pcp-api"
description = "Servidor Axum: auth, autorização e endpoints de leitura/escrita (raiz de composição)."
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
pcp-core = { path = "../pcp-core" }
pcp-config = { path = "../pcp-config" }
pcp-db = { path = "../pcp-db" }
pcp-engine = { path = "../pcp-engine" }
pcp-ai = { path = "../pcp-ai" }
