[package]
name = "pcp-config"
description = "Carrega e valida config/pcp.config.yaml + auditoria de mudanças (doc 02 §11)."
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

# Crate-folha: não depende de outros crates do projeto (CLAUDE.md §2).
[dependencies]
