[package]
name = "pcp-core"
description = "Domínio puro do PCP: regras de negócio do doc 02. Sem I/O, 100% testável."
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

# pcp-core NÃO depende de nada do projeto (CLAUDE.md §2 — núcleo no centro).
# Apenas crates externas do ecossistema Rust são permitidas (datas de negócio: chrono — §1).
[dependencies]
chrono = { version = "0.4", default-features = false }
