[package]
name = "pcp-db"
description = "Repositórios SQLx, modelos de persistência e helper de migrations."
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
# Mapeia tipos de domínio do núcleo para persistência (CLAUDE.md §2).
pcp-core = { path = "../pcp-core" }
