[package]
name = "pcp-db"
description = "Repositórios SQLx, modelos de persistência e helper de migrations."
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
# Mapeará tipos de domínio do núcleo para persistência (CLAUDE.md §2).
pcp-core = { path = "../pcp-core" }
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
    "chrono",
    "uuid",
] }
chrono = { version = "0.4", default-features = false }
uuid = { version = "1", features = ["serde"] }
thiserror = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
