[package]
name = "pcp-engine"
description = "Motor diário: orquestra os 4 módulos sobre pcp-core/pcp-db (doc 05 §1.2)."
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
pcp-core = { path = "../pcp-core" }
pcp-config = { path = "../pcp-config" }
pcp-db = { path = "../pcp-db" }
