[package]
name = "pcp-engine"
description = "Motor diário: orquestra os 4 módulos sobre pcp-core/pcp-db (doc 05 §1.2)."
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
pcp-core = { path = "../pcp-core" }
pcp-config = { path = "../pcp-config" }
pcp-db = { path = "../pcp-db" }
chrono = { version = "0.4", default-features = false }
thiserror = "1"
tracing = "0.1"
# Binário `processar` (orquestração do pipeline para uma data).
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
dotenvy = "0.15"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# Apenas para setup/teardown dos testes de integração (TRUNCATE), nunca no código de produção.
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
] }
