[package]
name = "pcp-etl"
description = "Ingestão de dados (arquivo/CSV agora; conector ERP One depois) atrás de FonteDados."
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
pcp-db = { path = "../pcp-db" }
csv = "1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
