[package]
name = "sf-db"
description = "Núcleo do SuperFlow: infra de dados compartilhada (pool, erro, migrations) e identidade."
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
    "chrono",
    "uuid",
    "json",
] }
chrono = { version = "0.4", default-features = false }
uuid = { version = "1", features = ["serde"] }
thiserror = "1"
