[package]
name = "pcp-tests"
description = "Testes de paridade e invariantes de regra (regressão) — doc 08 §3–4."
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]

# Os testes de integração (ETL → motor) e de paridade exercem o sistema inteiro.
[dev-dependencies]
pcp-config = { path = "../pcp-config" }
pcp-db = { path = "../pcp-db" }
pcp-etl = { path = "../pcp-etl" }
pcp-engine = { path = "../pcp-engine" }
chrono = { version = "0.4", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
] }
